kyverno/cluster-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-signed-images
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: verify-signature
    match:
      any:
      - resources:
          kinds: [Pod, Deployment, StatefulSet]
          namespaceSelector:
            matchLabels:
              signed-images: "enforce"
    exclude:
      any:
      - resources:
          namespaces: [kyverno, kube-system]

    verifyImages:
    - imageReferences:
        - "registry.dmirandam.com/nova/*"
      mutateDigest: true
      attestors:
      - count: 1
        entries:
        - keyless:
            issuer:  "https://token.actions.githubusercontent.com"
            subject: "https://github.com/software-architecture-proj/nova-frontend/.github/workflows/main.yml@refs/heads/main"
            rekor:    
              url: https://rekor.sigstore.dev
        - keyless:
            issuer:  "https://token.actions.githubusercontent.com"
            subject: "https://github.com/software-architecture-proj/nova-backend-auth-service/.github/workflows/main.yml@refs/heads/main"
            rekor:    
              url: https://rekor.sigstore.dev
        - keyless:
            issuer:  "https://token.actions.githubusercontent.com"
            subject: "https://github.com/software-architecture-proj/nova-backend-notification-service/.github/workflows/main.yml@refs/heads/main"
            rekor:    
              url: https://rekor.sigstore.dev
        - keyless:
            issuer:  "https://token.actions.githubusercontent.com"
            subject: "https://github.com/software-architecture-proj/nova-backend-transaction-service/.github/workflows/main.yml@refs/heads/main"
            rekor:    
              url: https://rekor.sigstore.dev
        - keyless:
            issuer:  "https://token.actions.githubusercontent.com"
            subject: "https://github.com/software-architecture-proj/nova-backend-api-gateway/.github/workflows/main.yml@refs/heads/main"
            rekor:    
              url: https://rekor.sigstore.dev
        - keyless:
            issuer:  "https://token.actions.githubusercontent.com"
            subject: "https://github.com/software-architecture-proj/nova-backend-user-product-service/.github/workflows/main.yml@refs/heads/main"
            rekor:    
              url: https://rekor.sigstore.dev
